# amitabha

./: Cargo.toml  README.md  diff2.txt
images/: pinhole-moving.avif
src/: color.rs  fluence.rs  lib.rs  main.rs  render.rs  scene.rs  storage.rs  trace.rs  utils.rs
src/trace/: block.rs  voxel.rs
