[package]
name = "amitabha"
version = "0.1.0"
edition = "2021"
default-run = "default"

[dependencies]
keter = { path = "https://github.com/entropylost/sefirot", features = [
    "trace",
] }
keter_testbed = { path = "https://github.com/entropylost/sefirot", features = [
    "video",
] }
palette = "0.7.6"

[features]
default = ["debug-scenes"]
debug-scenes = []
